# mahoyaku-picker

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/mahoyaku_picker/: __init__.py  fetch_event.py  fetch_sheet.py  picker.py
tests/: test_fetch_sheet.py  test_picker.py  test_ssr_parser.py
