[project]
name = "mahoyaku-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-api-python-client>=2.193.0",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "streamlit>=1.55.0",
]

[project.scripts]
mahoyaku-picker = "mahoyaku_picker:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
